fixed the bleeding dashboard chart issue

--- a/superset/assets/src/dashboard/stylesheets/components/chart.less
+++ b/superset/assets/src/dashboard/stylesheets/components/chart.less
@@ -23,6 +23,7 @@
   background-color: white;
   position: relative;
   padding: 16px;
+  overflow: auto;
 
   .missing-chart-container {
     display: flex;
